NN/force-app/main/default/objects/NN_Countrylayer2RegionalBlock__c/NN_Countrylayer2RegionalBlock__c.object-meta.xml
<CustomObject>
    <label>Countrylayer To Regional Block</label>
    <nameField>
        <label>Countrylayer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countrylayers To Regional Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>