NN/force-app/main/default/objects/NN_Countrylayer2RegionalBlock__c/fields/Alpha2codeToAcronym__c.field-meta.xml
<CustomField>
    <fullName>Alpha2codeToAcronym__c</fullName>
    <externalId>true</externalId>
    <label>Alpha2code To Acronym</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>