NN/force-app/main/default/objects/NN_Countrylayer2RegionalBlock__c/fields/Countrylayer__c.field-meta.xml
<CustomField>
    <fullName>Countrylayer__c</fullName>
    <label>Countrylayer</label>
    <referenceTo>NN_Countrylayer__c</referenceTo>
    <relationshipLabel>Countrylayers To Regional Blocks</relationshipLabel>
    <relationshipName>Countrylayers_To_Regional_Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>