NN/force-app/main/default/objects/NN_Countrylayer2RegionalBlock__c/fields/RegionalBlock__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlock__c</fullName>
    <label>Regional Block</label>
    <referenceTo>NN_RegionalBlock__c</referenceTo>
    <relationshipLabel>Countrylayers To Regional Blocks</relationshipLabel>
    <relationshipName>Regional_Blocks_To_Countrylayers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>